--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,492 +1,472 @@
 /********** Template CSS **********/
-:root {    
-    /* --primary: #722f37; */
-    --primary: #4761FF;
-    --secondary: #555555;
-    --light: #F1F3FA;
-    --dark: #1C2035;
+:root {
+  /* --primary: #722f37; */
+  --primary: #722f37;
+  --secondary: #555555;
+  --light: #f1f3fa;
+  --dark: #1c2035;
 }
 
 .back-to-top {
-    position: fixed;
-    display: none;
-    right: 30px;
-    bottom: 30px;
-    z-index: 99;
+  position: fixed;
+  display: none;
+  right: 30px;
+  bottom: 30px;
+  z-index: 99;
 }
 
 .fw-medium {
-    font-weight: 500;
+  font-weight: 500;
 }
-
 
 /*** Spinner ***/
 #spinner {
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity .5s ease-out, visibility 0s linear .5s;
-    z-index: 99999;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.5s ease-out, visibility 0s linear 0.5s;
+  z-index: 99999;
 }
 
 #spinner.show {
-    transition: opacity .5s ease-out, visibility 0s linear 0s;
-    visibility: visible;
-    opacity: 1;
+  transition: opacity 0.5s ease-out, visibility 0s linear 0s;
+  visibility: visible;
+  opacity: 1;
 }
-
 
 /*** Button ***/
 .btn {
-    transition: .5s;
-    font-weight: 500;
+  transition: 0.5s;
+  font-weight: 500;
 }
 
 .btn-primary,
 .btn-outline-primary:hover {
-    color: var(--light);
+  color: var(--light);
 }
 
 .btn-secondary,
 .btn-outline-secondary:hover {
-    color: var(--dark);
+  color: var(--dark);
 }
 
 .btn-square {
-    width: 38px;
-    height: 38px;
+  width: 38px;
+  height: 38px;
 }
 
 .btn-sm-square {
-    width: 32px;
-    height: 32px;
+  width: 32px;
+  height: 32px;
 }
 
 .btn-lg-square {
-    width: 48px;
-    height: 48px;
+  width: 48px;
+  height: 48px;
 }
 
 .btn-square,
 .btn-sm-square,
 .btn-lg-square {
-    padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: normal;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: normal;
 }
-
 
 /*** Navbar ***/
 
-
-
 /*** Header ***/
 
-
 /*** Features ***/
-.feature-row {
-    box-shadow: 0 0 45px rgba(0, 0, 0, .08);
-}
-
-.feature-item {
-    border-color: rgba(0, 0, 0, .03) !important;
-}
 
 
 /*** About ***/
 .about {
-    background: linear-gradient(rgba(0, 0, 0, .1), rgba(0, 0, 0, .1)), url(../img/about.jpg) left center no-repeat;
-    background-size: cover;
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
+    url(../img/about.jpg) left center no-repeat;
+  background-size: cover;
 }
 
 .btn-play {
-    position: relative;
-    display: block;
-    box-sizing: content-box;
-    width: 36px;
-    height: 46px;
-    border-radius: 100%;
-    border: none;
-    outline: none !important;
-    padding: 18px 20px 20px 28px;
-    background: var(--primary);
+  position: relative;
+  display: block;
+  box-sizing: content-box;
+  width: 36px;
+  height: 46px;
+  border-radius: 100%;
+  border: none;
+  outline: none !important;
+  padding: 18px 20px 20px 28px;
+  background: var(--primary);
 }
 
 .btn-play:before {
-    content: "";
-    position: absolute;
-    z-index: 0;
-    left: 50%;
-    top: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    display: block;
-    width: 90px;
-    height: 90px;
-    background: var(--primary);
-    border-radius: 100%;
-    animation: pulse-border 1500ms ease-out infinite;
+  content: "";
+  position: absolute;
+  z-index: 0;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  display: block;
+  width: 90px;
+  height: 90px;
+  background: var(--primary);
+  border-radius: 100%;
+  animation: pulse-border 1500ms ease-out infinite;
 }
 
 .btn-play:after {
-    content: "";
-    position: absolute;
-    z-index: 1;
-    left: 50%;
-    top: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    display: block;
-    width: 90px;
-    height: 90px;
-    background: var(--primary);
-    border-radius: 100%;
-    transition: all 200ms;
+  content: "";
+  position: absolute;
+  z-index: 1;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  display: block;
+  width: 90px;
+  height: 90px;
+  background: var(--primary);
+  border-radius: 100%;
+  transition: all 200ms;
 }
 
 .btn-play span {
-    display: block;
-    position: relative;
-    z-index: 3;
-    width: 0;
-    height: 0;
-    left: 3px;
-    border-left: 30px solid #FFFFFF;
-    border-top: 18px solid transparent;
-    border-bottom: 18px solid transparent;
+  display: block;
+  position: relative;
+  z-index: 3;
+  width: 0;
+  height: 0;
+  left: 3px;
+  border-left: 30px solid #ffffff;
+  border-top: 18px solid transparent;
+  border-bottom: 18px solid transparent;
 }
 
 @keyframes pulse-border {
-    0% {
-        transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1);
-        opacity: 1;
-    }
+  0% {
+    transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1);
+    opacity: 1;
+  }
 
-    100% {
-        transform: translateX(-50%) translateY(-50%) translateZ(0) scale(2);
-        opacity: 0;
-    }
+  100% {
+    transform: translateX(-50%) translateY(-50%) translateZ(0) scale(2);
+    opacity: 0;
+  }
 }
 
 .modal-video .modal-dialog {
-    position: relative;
-    max-width: 800px;
-    margin: 60px auto 0 auto;
+  position: relative;
+  max-width: 800px;
+  margin: 60px auto 0 auto;
 }
 
 .modal-video .modal-body {
-    position: relative;
-    padding: 0px;
+  position: relative;
+  padding: 0px;
 }
 
 .modal-video .close {
-    position: absolute;
-    width: 30px;
-    height: 30px;
-    right: 0px;
-    top: -30px;
-    z-index: 999;
-    font-size: 30px;
-    font-weight: normal;
-    color: #FFFFFF;
-    background: #000000;
-    opacity: 1;
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  right: 0px;
+  top: -30px;
+  z-index: 999;
+  font-size: 30px;
+  font-weight: normal;
+  color: #ffffff;
+  background: #000000;
+  opacity: 1;
 }
-
 
 /*** Service ***/
 .service-item .service-text {
-    position: relative;
-    width: 100%;
-    top: 0;
-    left: 0;
-    text-align: center;
-    background: #FFFFFF;
-    box-shadow: 0 0 45px rgba(0, 0, 0, .06);
-    transition: .5s;
-    z-index: 2;
+  position: relative;
+  width: 100%;
+  top: 0;
+  left: 0;
+  text-align: center;
+  background: #ffffff;
+  box-shadow: 0 0 45px rgba(0, 0, 0, 0.06);
+  transition: 0.5s;
+  z-index: 2;
 }
 
 .service-item:hover .service-text {
-    top: -1.5rem;
+  top: -1.5rem;
 }
 
 .service-item .service-text h5 {
-    transition: .5s;
+  transition: 0.5s;
 }
 
 .service-item:hover .service-text h5 {
-    color: var(--primary);
+  color: var(--primary);
 }
 
 .service-item .service-btn {
-    position: absolute;
-    width: 80%;
-    height: 3rem;
-    left: 10%;
-    bottom: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #FFFFFF;
-    box-shadow: 0 0 45px rgba(0, 0, 0, .07);
-    transition: .5s;
-    z-index: 1;
+  position: absolute;
+  width: 80%;
+  height: 3rem;
+  left: 10%;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #ffffff;
+  box-shadow: 0 0 45px rgba(0, 0, 0, 0.07);
+  transition: 0.5s;
+  z-index: 1;
 }
 
 .service-item:hover .service-btn {
-    bottom: -1.5rem;
+  bottom: -1.5rem;
 }
-
 
 /*** Project ***/
 .project-item {
-    position: relative;
-    border-radius: 8px;
-    overflow: hidden;
-    box-shadow: 0 0 45px rgba(0, 0, 0, .07);
+  position: relative;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 0 45px rgba(0, 0, 0, 0.07);
 }
 
 .project-item .project-overlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: rgba(0, 0, 0, .5);
-    opacity: 0;
-    padding-top: 60px;
-    transition: .5s;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  padding-top: 60px;
+  transition: 0.5s;
 }
 
 .project-item:hover .project-overlay {
-    opacity: 1;
-    padding-top: 0;
+  opacity: 1;
+  padding-top: 0;
 }
 
 .project-carousel .owl-nav {
-    position: absolute;
-    top: -100px;
-    right: 0;
-    display: flex;
+  position: absolute;
+  top: -100px;
+  right: 0;
+  display: flex;
 }
 
 .project-carousel .owl-nav .owl-prev,
 .project-carousel .owl-nav .owl-next {
-    margin-left: 15px;
-    width: 55px;
-    height: 55px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: var(--secondary);
-    border-radius: 55px;
-    box-shadow: 0 0 45px rgba(0, 0, 0, .15);
-    font-size: 25px;
-    transition: .5s;
+  margin-left: 15px;
+  width: 55px;
+  height: 55px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--secondary);
+  border-radius: 55px;
+  box-shadow: 0 0 45px rgba(0, 0, 0, 0.15);
+  font-size: 25px;
+  transition: 0.5s;
 }
 
 .project-carousel .owl-nav .owl-prev:hover,
 .project-carousel .owl-nav .owl-next:hover {
-    background: var(--primary);
-    color: #FFFFFF;
+  background: var(--primary);
+  color: #ffffff;
 }
 
 @media (max-width: 768px) {
-    .project-carousel .owl-nav {
-        top: -70px;
-        right: auto;
-        left: 50%;
-        transform: translateX(-50%);
-    }
+  .project-carousel .owl-nav {
+    top: -70px;
+    right: auto;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 
-    .project-carousel .owl-nav .owl-prev,
-    .project-carousel .owl-nav .owl-next {
-        margin: 0 7px;
-        width: 45px;
-        height: 45px;
-        font-size: 20px;
-    }
+  .project-carousel .owl-nav .owl-prev,
+  .project-carousel .owl-nav .owl-next {
+    margin: 0 7px;
+    width: 45px;
+    height: 45px;
+    font-size: 20px;
+  }
 }
-
 
 /*** Team ***/
 .team-item {
-    position: relative;
-    text-align: center;
-    box-shadow: 0 0 45px rgba(0, 0, 0, .07);
+  position: relative;
+  text-align: center;
+  box-shadow: 0 0 45px rgba(0, 0, 0, 0.07);
 }
 
 .team-item .team-social {
-    position: absolute;
-    padding: 0;
-    top: 15px;
-    left: 0;
-    overflow: hidden;
+  position: absolute;
+  padding: 0;
+  top: 15px;
+  left: 0;
+  overflow: hidden;
 }
 
 .team-item .team-social li {
-    list-style-type: none;
-    margin-bottom: 10px;
-    margin-left: -50px;
-    opacity: 0;
-    transition: .5s;
+  list-style-type: none;
+  margin-bottom: 10px;
+  margin-left: -50px;
+  opacity: 0;
+  transition: 0.5s;
 }
 
 .team-item:hover .team-social li {
-    margin-left: 15px;
-    opacity: 1;
+  margin-left: 15px;
+  opacity: 1;
 }
 
 .team-item .team-social li .btn {
-    background: #FFFFFF;
-    color: var(--primary);
-    border-radius: 40px;
-    transition: .5s;
+  background: #ffffff;
+  color: var(--primary);
+  border-radius: 40px;
+  transition: 0.5s;
 }
 
 .team-item .team-social li .btn:hover {
-    color: #FFFFFF;
-    background: var(--primary);
+  color: #ffffff;
+  background: var(--primary);
 }
 
 .team-item .team-social li:nth-child(1) {
-    transition-delay: .1s;
+  transition-delay: 0.1s;
 }
 
 .team-item .team-social li:nth-child(2) {
-    transition-delay: .2s;
+  transition-delay: 0.2s;
 }
 
 .team-item .team-social li:nth-child(3) {
-    transition-delay: .3s;
+  transition-delay: 0.3s;
 }
 
 .team-item .team-social li:nth-child(4) {
-    transition-delay: .4s;
+  transition-delay: 0.4s;
 }
 
 .team-item .team-social li:nth-child(5) {
-    transition-delay: .5s;
+  transition-delay: 0.5s;
 }
-
 
 /*** Testimonial ***/
 .testimonial-item {
-    box-shadow: 0 0 45px rgba(0, 0, 0, .07);
-    transition: .5s;
+  box-shadow: 0 0 45px rgba(0, 0, 0, 0.07);
+  transition: 0.5s;
 }
 
 .owl-item .testimonial-item,
 .testimonial-item * {
-    transition: .5s;
+  transition: 0.5s;
 }
 
 .owl-item.center .testimonial-item,
 .testimonial-item:hover {
-    background: var(--primary);
+  background: var(--primary);
 }
 
 .owl-item.center .testimonial-item *,
 .testimonial-item:hover * {
-    color: #FFFFFF !important;
+  color: #ffffff !important;
 }
 
 .testimonial-item img {
-    width: 100px !important;
-    height: 100px !important;
-    border-radius: 100px;
+  width: 100px !important;
+  height: 100px !important;
+  border-radius: 100px;
 }
 
 .testimonial-carousel .owl-nav {
-    position: absolute;
-    top: -100px;
-    right: 0;
-    display: flex;
+  position: absolute;
+  top: -100px;
+  right: 0;
+  display: flex;
 }
 
 .testimonial-carousel .owl-nav .owl-prev,
 .testimonial-carousel .owl-nav .owl-next {
-    margin-left: 15px;
-    width: 55px;
-    height: 55px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: var(--secondary);
-    border-radius: 55px;
-    box-shadow: 0 0 45px rgba(0, 0, 0, .15);
-    font-size: 25px;
-    transition: .5s;
+  margin-left: 15px;
+  width: 55px;
+  height: 55px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--secondary);
+  border-radius: 55px;
+  box-shadow: 0 0 45px rgba(0, 0, 0, 0.15);
+  font-size: 25px;
+  transition: 0.5s;
 }
 
 .testimonial-carousel .owl-nav .owl-prev:hover,
 .testimonial-carousel .owl-nav .owl-next:hover {
-    background: var(--primary);
-    color: #FFFFFF;
+  background: var(--primary);
+  color: #ffffff;
 }
 
 @media (max-width: 768px) {
-    .testimonial-carousel .owl-nav {
-        top: -70px;
-        right: auto;
-        left: 50%;
-        transform: translateX(-50%);
-    }
+  .testimonial-carousel .owl-nav {
+    top: -70px;
+    right: auto;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 
-    .testimonial-carousel .owl-nav .owl-prev,
-    .testimonial-carousel .owl-nav .owl-next {
-        margin: 0 7px;
-        width: 45px;
-        height: 45px;
-        font-size: 20px;
-    }
+  .testimonial-carousel .owl-nav .owl-prev,
+  .testimonial-carousel .owl-nav .owl-next {
+    margin: 0 7px;
+    width: 45px;
+    height: 45px;
+    font-size: 20px;
+  }
 }
-
 
 /*** Footer ***/
 .footer {
-    color: #B0B9AE;
+  color: #b0b9ae;
 }
 
 .footer .btn.btn-link {
-    display: block;
-    margin-bottom: 5px;
-    padding: 0;
-    text-align: left;
-    color: #B0B9AE;
-    font-weight: normal;
-    text-transform: capitalize;
-    transition: .3s;
+  display: block;
+  margin-bottom: 5px;
+  padding: 0;
+  text-align: left;
+  color: #b0b9ae;
+  font-weight: normal;
+  text-transform: capitalize;
+  transition: 0.3s;
 }
 
 .footer .btn.btn-link::before {
-    position: relative;
-    content: "\f105";
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-    margin-right: 10px;
+  position: relative;
+  content: "\f105";
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  margin-right: 10px;
 }
 
 .footer .btn.btn-link:hover {
-    color: var(--light);
-    letter-spacing: 1px;
-    box-shadow: none;
+  color: var(--light);
+  letter-spacing: 1px;
+  box-shadow: none;
 }
 
 .copyright {
-    color: #B0B9AE;
+  color: #b0b9ae;
 }
 
 .copyright {
-    background: #111111;
+  background: #111111;
 }
 
 .copyright a:hover {
-    color: var(--primary) !important;
+  color: var(--primary) !important;
 }
-
-
-
