--- a/src/components/testimonial/testimonial.css
+++ b/src/components/testimonial/testimonial.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   /* margin-left: 150px; */
-
 }
 
 .testimonial p {
@@ -13,72 +12,93 @@
   float: right;
 }
 .testimonial-item {
-    box-shadow: 0 0 45px rgba(0, 0, 0, .07);
-    transition: .5s;
+  box-shadow: 0 0 45px rgba(0, 0, 0, 0.07);
+  transition: 0.5s;
 }
 
 .owl-item .testimonial-item,
 .testimonial-item * {
-    transition: .5s;
+  transition: 0.5s;
 }
 
 .owl-item.center .testimonial-item,
 .testimonial-item:hover {
-    background: var(--primary);
+  background: var(--primary);
 }
 
 .owl-item.center .testimonial-item *,
 .testimonial-item:hover * {
-    color: #FFFFFF !important;
+  color: #ffffff !important;
 }
 
 .testimonial-item img {
-    width: 100px !important;
-    height: 100px !important;
-    border-radius: 100px;
+  width: 100px !important;
+  height: 100px !important;
+  border-radius: 100px;
 }
 
 .testimonial-carousel .owl-nav {
-    position: absolute;
-    top: -100px;
-    right: 0;
-    display: flex;
+  position: absolute;
+  top: -100px;
+  right: 0;
+  display: flex;
 }
 
 .testimonial-carousel .owl-nav .owl-prev,
 .testimonial-carousel .owl-nav .owl-next {
-    margin-left: 15px;
-    width: 55px;
-    height: 55px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: var(--secondary);
-    border-radius: 55px;
-    box-shadow: 0 0 45px rgba(0, 0, 0, .15);
-    font-size: 25px;
-    transition: .5s;
+  margin-left: 15px;
+  width: 55px;
+  height: 55px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--secondary);
+  border-radius: 55px;
+  box-shadow: 0 0 45px rgba(0, 0, 0, 0.15);
+  font-size: 25px;
+  transition: 0.5s;
 }
 
 .testimonial-carousel .owl-nav .owl-prev:hover,
 .testimonial-carousel .owl-nav .owl-next:hover {
-    background: var(--primary);
-    color: #FFFFFF;
+  background: var(--primary);
+  color: #ffffff;
 }
 
 @media (max-width: 768px) {
-    .testimonial-carousel .owl-nav {
-        top: -70px;
-        right: auto;
-        left: 50%;
-        transform: translateX(-50%);
-    }
+  .testimonial-carousel .owl-nav {
+    top: -70px;
+    right: auto;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 
-    .testimonial-carousel .owl-nav .owl-prev,
-    .testimonial-carousel .owl-nav .owl-next {
-        margin: 0 7px;
-        width: 45px;
-        height: 45px;
-        font-size: 20px;
-    }
+  .testimonial-carousel .owl-nav .owl-prev,
+  .testimonial-carousel .owl-nav .owl-next {
+    margin: 0 7px;
+    width: 45px;
+    height: 45px;
+    font-size: 20px;
+  }
+}
+
+.wrapper {
+  background:  #f0dbdd;
+  margin: 70px 0 0 250px;
+  padding: 10px;
+  width: 600px;
+}
+
+.wrapper p {
+  font-weight: bold;
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.wrapper h3,
+h6 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
