--- a/src/components/sumup/sum.css
+++ b/src/components/sumup/sum.css
@@ -4,6 +4,7 @@
   margin-top: 20px;
 }
 
+
 .sumup h5 {
   padding: 40px 0 0 40px;
   display: flex;
@@ -31,7 +32,6 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   max-width: 300px;
   margin-right: 20px;
-  /* margin: auto; */
   text-align: center;
   margin-top: 30px;
 }
@@ -135,7 +135,8 @@ h3 {
     margin-left: -5px;
   }
 
-  .signup h3, h5 {
+  .signup h3,
+  h5 {
     margin-left: 30px;
   }
 }
